--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">10 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -136,7 +136,7 @@
                     <div class="video-info">
                         <h3>Arthur Visits Bradford😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -147,7 +147,7 @@
                     <div class="video-info">
                         <h3>The Way of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                     <div class="video-info">
                         <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Inspiration - Being It vs Finding It</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -334,7 +334,7 @@
                     <div class="video-info">
                         <h3>How gratitude deepens your connection to now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -444,7 +444,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the True Meaning of “Love Thy Neighbor”</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -455,7 +455,7 @@
                     <div class="video-info">
                         <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -611,7 +611,7 @@
                     <div class="video-info">
                         <h3>How to go beyond thought and sense pure presence</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -710,7 +710,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How to Embrace Your Oneness with the Universe</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -721,7 +721,7 @@
                     <div class="video-info">
                         <h3>Be the Presence, Not the Person | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1029,7 +1029,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Simple Practices Transform Daily Life</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2206,7 +2206,7 @@
                     <div class="video-info">
                         <h3>Here is how I Lost my the5ers Account</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5745,7 +5745,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">10 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5756,7 +5756,7 @@
                         <div class="video-info">
                             <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6440,7 +6440,7 @@
                         <div class="video-info">
                             <h3>Here is how I Lost my the5ers Account</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>The Way of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Inspiration - Being It vs Finding It</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7986,7 +7986,7 @@
                         <div class="video-info">
                             <h3>How gratitude deepens your connection to now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8052,7 +8052,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the True Meaning of “Love Thy Neighbor”</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8063,7 +8063,7 @@
                         <div class="video-info">
                             <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8129,7 +8129,7 @@
                         <div class="video-info">
                             <h3>How to go beyond thought and sense pure presence</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8173,7 +8173,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How to Embrace Your Oneness with the Universe</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8184,7 +8184,7 @@
                         <div class="video-info">
                             <h3>Be the Presence, Not the Person | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8239,7 +8239,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Simple Practices Transform Daily Life</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Visits Bradford😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
