--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -169,7 +169,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>How To Be In the Grace of Yoga? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -433,7 +433,7 @@
                     <div class="video-info">
                         <h3>This Zone Recovery Strategy is INSANE (High Probability Trading)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -886,7 +886,7 @@
                     <div class="video-info">
                         <h3>Is time a friend or foe?</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1018,7 +1018,7 @@
                     <div class="video-info">
                         <h3>Simple Practices to Transform Your Daily Life | With Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2488,9 +2488,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
+                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Spine Angle MYTH Holding Your Distance Hostage (50 Yards or More)">
                     <div class="video-info">
-                        <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
+                        <h3>The Spine Angle MYTH Holding Your Distance Hostage (50 Yards or More)</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">3 weeks ago</div>
                     </div>
@@ -5745,7 +5745,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5767,7 +5767,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5800,7 +5800,7 @@
                         <div class="video-info">
                             <h3>This Zone Recovery Strategy is INSANE (High Probability Trading)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>How To Be In the Grace of Yoga? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8206,7 +8206,7 @@
                         <div class="video-info">
                             <h3>Is time a friend or foe?</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8228,7 +8228,7 @@
                         <div class="video-info">
                             <h3>Simple Practices to Transform Your Daily Life | With Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10090,9 +10090,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
+                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Spine Angle MYTH Holding Your Distance Hostage (50 Yards or More)">
                         <div class="video-info">
-                            <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
+                            <h3>The Spine Angle MYTH Holding Your Distance Hostage (50 Yards or More)</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">3 weeks ago</div>
                         </div>
